fix(ui): set z-index to span.unread-mark

--- a/cotoami_desktop/ui/assets/css/app/_timeline.scss
+++ b/cotoami_desktop/ui/assets/css/app/_timeline.scss
@@ -135,6 +135,7 @@ section.timeline {
       left: 8px;
       font-size: 10px;
       line-height: 10px;
+      z-index: 2;
     }
   }
 }
